--- a/src/components/LandingPageComponent.module.css
+++ b/src/components/LandingPageComponent.module.css
@@ -1,5 +1,3 @@
-/* LandingPageComponent.module.css */
-
 .container {
     display: flex;
     flex-direction: column;
@@ -8,50 +6,64 @@
     height: 100vh;
     padding: 20px;
     text-align: center;
-    background-color: #f5f5f5;
+    background-color: #ffffff;
     box-sizing: border-box;
 }
 
 .content {
-    margin-bottom: 20px;
+    width: 100%;
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.coexist {
+    color: #706E9A;
+}
+
+h1, h2, p {
+    margin: 10px 0;
+    font-family: "Lexend", sans-serif;
 }
 
 h1 {
     font-size: 2rem;
-    margin-bottom: 10px;
+}
+
+h2 {
+    font-size: 1.5rem;
 }
 
 p {
     font-size: 1rem;
-    margin-bottom: 20px;
 }
 
 img {
     width: 50%;
     max-width: 200px;
     height: auto;
-    margin-bottom: 20px;
+    margin: 20px 0;
 }
 
 .footer {
+    width: 100%;
     display: flex;
     justify-content: center;
-    width: 100%;
 }
 
 .startButton {
     padding: 10px 20px;
     font-size: 1rem;
-    background-color: #007bff;
+    background-color: #706E9A;
     color: white;
     border: none;
-    border-radius: 5px;
+    border-radius: 25px;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
 
 .startButton:hover {
     background-color: #0056b3;
+
 }
 
 @media (max-width: 768px) {
@@ -59,12 +71,16 @@ img {
         font-size: 1.5rem;
     }
 
+    h2 {
+        font-size: 1.25rem;
+    }
+
     p {
         font-size: 0.875rem;
     }
 
     img {
-        width: 70%;
+        width: 80%;
     }
 
     .startButton {
@@ -76,6 +92,10 @@ img {
 @media (max-width: 480px) {
     h1 {
         font-size: 1.25rem;
+    }
+
+    h2 {
+        font-size: 1rem;
     }
 
     p {
