--- a/src/components/QuestionComponent.module.css
+++ b/src/components/QuestionComponent.module.css
@@ -2,82 +2,47 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start; /* Changed from space-between to flex-start */
     height: 100vh;
-    padding: 2vh;
+    max-width: 100vh;
+    padding-top: 50px; /* Adjust this value based on the actual height of your header */
+    padding-bottom: 50px; /* Adjust this value based on the actual height of your next button */
     box-sizing: border-box;
     text-align: center;
+    overflow: hidden; /* Ensures no scrolling */
 }
 
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.nextButton {
+    position: fixed; /* Fixed positioning */
+    bottom: 0; /* Align to the bottom */
     width: 100%;
-    max-width: 80vh;
-    margin-bottom: 1vh;
-}
-
-.backButton {
-    left: 1vh;
-    font-size: 2vh;
-    text-transform: none;
-    color: #706E9A;
-    background: none;
-    border: none;
-    cursor: pointer;
-}
-
-.fraction {
-    font-size: 2vh;
-    text-align: center;
-}
-
-.coexistButton {
-    right: 1vh;
-    font-size: 2vh;
-    text-transform: none;
-    color: #706E9A;
-    background: none;
-    border: none;
-    cursor: pointer;
+    max-width: 100vh; /* Ensuring it spans the full width */
+    z-index: 1000; /* Ensures it stays on top of other content */
 }
 
 .questionBox {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
     background-color: #F9F9F9;
     padding: 2vh;
     border-radius: 4vh;
     box-shadow: 0 0.4vh 0.8vh rgba(0, 0, 0, 0.1);
     width: 80%;
     max-width: 60vh;
-    margin-bottom: 2vh;
     text-align: center;
+    margin: 20px auto; /* Auto margins for central alignment */
     flex-grow: 1;
-}
-
-.questionImage {
-    max-width: 100%;
-    height: auto;
-    margin-bottom: 1vh;
-}
-
-.question {
-    font-size: 2.5vh;
-    margin-bottom: 1vh;
-    font-family: "Lexend", sans-serif;
+    overflow-y: auto; /* Allows scrolling within the question box only if necessary */
 }
 
 .options {
-    width: 100%;
+    width: 80%;
     max-width: 60vh;
     display: flex;
     flex-direction: column;
-    margin-top: 1vh;
+    margin: 20px auto; /* Auto margins for central alignment */
 }
+
+/* No changes needed below this line, unless adjustments to paddings/margins are required for fitting */
+
 .option {
     position: relative;
     overflow: hidden;
