--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,27 @@
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@400;700&display=swap');
+
 .container {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Lexend', sans-serif;
 }
 
 .section {
-  margin-bottom: 2vh; /* Adjust this value to control spacing between sections */
+    margin-bottom: 2vh; /* Adjust this value to control spacing between sections */
 }
 
 .download-buttons-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 2vh 0;
-  background-color: #f9f9f9;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 2vh 0;
+    background-color: #f9f9f9;
 }
 
 .blog-container {
-  text-align: center;
-  padding: 2vh;
-  background-color: #fff;
+    text-align: center;
+    padding: 2vh;
+    background-color: #fff;
 }
