--- a/src/components/DownloadButtons.css
+++ b/src/components/DownloadButtons.css
@@ -3,7 +3,7 @@
     flex-direction: column;
     align-items: center;
     color: #333;
-    background-color: #f9f9f9;
+    background-color: #fff;
 
     overflow: auto;
 }
@@ -25,7 +25,7 @@
 }
 
 .apple-store:hover, .google-play:hover {
-    background-color: #f0f0f0;
+    background-color: #fff;
     color: #333;
 }
 
