--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -1,6 +1,8 @@
 .blog-container {
     text-align: center;
     background-color: #fff;
+    padding-left: 4vh;
+    padding-right: 4vh;
 }
 
 .blog-grid {
