before i change a lot of stuff to backend

--- a/src/components/LandingPageComponent.module.css
+++ b/src/components/LandingPageComponent.module.css
@@ -11,6 +11,7 @@
     padding: 5vh; /* Adjusted padding to use vh */
     box-sizing: border-box;
     overflow: hidden; /* Ensures no overflow */
+    font-family: 'Lexend', sans-serif;
 }
 
 .content {
