--- a/src/components/Blog.css
+++ b/src/components/Blog.css
@@ -1,16 +1,15 @@
 .blog-container {
     text-align: center;
-    background-color: #fff;
-    padding-left: 4vh;
-    padding-right: 4vh;
+    background-color: #CCDBE6;  /* Ensures consistent background color */
+    padding: 4vh;  /* Unified padding shorthand */
 }
 
 .blog-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Responsive grid that adjusts to screen size */
     gap: 2vh;
     justify-content: center;
-    align-items: center;
+    align-items: start; /* Align items to the start to handle variable content length */
 }
 
 .blog-post {
@@ -18,35 +17,74 @@
     border: 0.1vh solid #ddd;
     border-radius: 0.8vh;
     padding: 2vh;
-    box-shadow: 0 0.2vh 0.4vh rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0.2vh 0.4vh rgba(35, 222, 113, 0.1);
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 40vh; /* Adjusted height for the blog post */
+    position: relative; /* Needed for positioning the pseudo-element for the tint */
+    overflow: hidden; /* Ensures the tint and image don't overflow */
+    min-height: 300px;
 }
 
 .image-wrapper {
-    height: 13.33vh; /* 1/3 of 40vh */
+    height: 13.33vh; /* 1/3 of the fixed height */
     width: 100%;
-    overflow: hidden; /* Ensures image stays within bounds */
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    overflow: hidden;
+    position: relative;
 }
 
 .blog-image {
     width: 100%;
-    height: auto;
-    object-fit: cover; /* Ensures image covers the area */
+    height: 31vh; /* Full height to allow only the top part to be visible */
+    object-fit: cover;
+    transition: transform 0.5s ease; /* Smooth transition for hover effects */
+    z-index: 1000
+}
+
+.image-wrapper::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(204, 219, 230, 0.5);
+    z-index: 1; /* Ensures it's above the image but below the text */
+}
+
+.tint1 .image-wrapper::before {
+    background: rgb(239, 205, 154,0.6)
+}
+
+.tint2 .image-wrapper::before {
+    background: rgb(177, 197, 177, 0.6)
+}
+
+.tint3 .image-wrapper::before {
+    background:rgb(225, 188, 199, 0.6)
+}
+
+.tint4 .image-wrapper::before {
+    background: rgb(178, 196, 207, 0.6)
 }
 
 .blog-title {
     font-size: 2.5vh;
     color: #333;
-    margin-bottom: 1vh;
+    z-index: 2; /* Ensures text appears above the tint */
+    padding-top: 1vh; /* Space above the title */
 }
 
 .blog-blurb {
     font-size: 2vh;
     color: #666;
+    z-index: 2; /* Ensures text appears above the tint */
+}
+
+.apple-store:hover, .google-play:hover {
+    color: #333;
+}
+
+.apple-store span, .google-play span {
+    display: block;
 }
