--- a/src/components/QuestionComponent.module.css
+++ b/src/components/QuestionComponent.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     font-family: "Lexend", sans-serif;
     justify-content: flex-start;
-    height: 100vh;
+    min-height: 100vh;
     background-color: white;
     width: 100vw;
     padding-top: 50px;
@@ -14,6 +14,8 @@
     overflow: hidden;
     color: black;
 }
+
+
 
 .questionBox {
     background-color: #F9F9F9;
@@ -27,6 +29,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between; /* Distributes space evenly */
+    font-family: 'Lexend', sans-serif;
     
 }
 
@@ -72,14 +75,12 @@
     outline: 0.1vh solid black; /* Outline the option */
 }
 
-
 .optionBackground {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
-    background-color: #CCDBE6;
-    transition: width 0.5s ease-in-out;
+    transition: width 0.5s ease-in-out, background-color 0.3s ease; 
     z-index: 0;
     border-radius: 5vh;
 }
